# libptp2-theta

./: Makefile  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
src/: Makefile  Makefile.am  Makefile.in  libptp-endian.h  properties.c  ptp.c  ptp.h  ptpcam  ptpcam.c  ptpcam.h  theta
src/.deps/: properties.Plo  ptp.Plo  ptpcam-myusb.Po  ptpcam-ptpcam.Po  theta-myusb.Po  theta-ptpcam.Po
src/.libs/: libptp2.lai  ptpcam  theta
